[gd_scene load_steps=14 format=4 uid="uid://br1i5blomvop8"]

[ext_resource type="Script" uid="uid://p3dknjlbapj8" path="res://script/level.gd" id="1_ivkd0"]
[ext_resource type="PackedScene" uid="uid://dictx4gta0hui" path="res://scenes/levels/level_three.tscn" id="2_fo2p1"]
[ext_resource type="PackedScene" uid="uid://brd4ncj2g0yr8" path="res://scenes/UI/hud.tscn" id="2_gqryv"]
[ext_resource type="PackedScene" uid="uid://b5wdv8et6s6ti" path="res://scenes/UI/game_over_screen.tscn" id="3_5qm6s"]
[ext_resource type="Texture2D" uid="uid://cpem4ka8j5lmo" path="res://assets/environments/other/Clouds1.png" id="4_chx1n"]
[ext_resource type="PackedScene" uid="uid://bya45vo6pmnr5" path="res://scenes/player.tscn" id="5_oei0b"]
[ext_resource type="TileSet" uid="uid://b0jt5s5halm3b" path="res://assets/environments/tilesets/base_tileset.tres" id="6_fo2p1"]
[ext_resource type="PackedScene" uid="uid://beq3tilqra0s1" path="res://scenes/checkpoint.tscn" id="6_oei0b"]
[ext_resource type="PackedScene" uid="uid://4g8vybniap72" path="res://scenes/traps/floor_saw.tscn" id="7_gqryv"]
[ext_resource type="PackedScene" uid="uid://b0ovmfcpx61wg" path="res://scenes/traps/death_zone.tscn" id="7_iuav1"]
[ext_resource type="PackedScene" uid="uid://fl5213m8vyog" path="res://scenes/exit_area.tscn" id="8_yr121"]
[ext_resource type="PackedScene" uid="uid://cglkhop60c0x6" path="res://scenes/traps/saw.tscn" id="10_5qm6s"]
[ext_resource type="PackedScene" uid="uid://c34vmxi7ee3ij" path="res://scenes/traps/spike_trap.tscn" id="11_chx1n"]

[node name="Level" type="Node2D"]
script = ExtResource("1_ivkd0")
next_level = ExtResource("2_fo2p1")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("2_gqryv")]
offset_left = 112.0
offset_top = 64.0
offset_right = 112.0
offset_bottom = 64.0
metadata/_edit_use_anchors_ = true

[node name="Game_Over_Screen" parent="UI" instance=ExtResource("3_5qm6s")]
visible = false

[node name="base_objects" type="Node2D" parent="."]

[node name="Background" type="Sprite2D" parent="base_objects"]
z_index = -1000
texture_filter = 1
texture_repeat = 3
position = Vector2(2364.5, 133.167)
scale = Vector2(7.559, 10.8463)
texture = ExtResource("4_chx1n")
region_enabled = true
region_rect = Rect2(0, 0, 1000, 180)

[node name="Checkpoint" parent="base_objects" instance=ExtResource("6_oei0b")]
visible = false
scale = Vector2(5, 5)

[node name="Player" parent="base_objects" instance=ExtResource("5_oei0b")]
position = Vector2(575, 210)
scale = Vector2(4, 4)

[node name="Marker2D" type="Marker2D" parent="base_objects"]
position = Vector2(306, 360)

[node name="Starfruit" parent="." instance=ExtResource("8_yr121")]
position = Vector2(3404, 227)
scale = Vector2(6, 6)
animation_choice = "d_blue"
sparkle_size = [9, 12]

[node name="hidden_traps" type="Node2D" parent="."]

[node name="DeathZone" parent="hidden_traps" instance=ExtResource("7_iuav1")]
position = Vector2(-2643, 712)
scale = Vector2(13.2397, 1.13078)

[node name="saw" parent="hidden_traps" instance=ExtResource("10_5qm6s")]
position = Vector2(438, 657)
scale = Vector2(4, 4)
speed_x = 75
max_distance = 200

[node name="saw2" parent="hidden_traps" instance=ExtResource("10_5qm6s")]
position = Vector2(1500, 300)
scale = Vector2(4, 4)
speed_y = 125
max_distance = 300

[node name="saw3" parent="hidden_traps" instance=ExtResource("10_5qm6s")]
position = Vector2(1350, 200)
scale = Vector2(4, 4)
speed_y = 200
max_distance = 300

[node name="saw4" parent="hidden_traps" instance=ExtResource("10_5qm6s")]
position = Vector2(1250, 300)
scale = Vector2(4, 4)
speed_y = 100
max_distance = 300

[node name="spike_trap5" parent="hidden_traps" instance=ExtResource("11_chx1n")]
position = Vector2(3186, 328)
rotation = 1.54898
scale = Vector2(7, 7)

[node name="spike_trap6" parent="hidden_traps" instance=ExtResource("11_chx1n")]
position = Vector2(3186, 237)
rotation = 1.54898
scale = Vector2(7, 7)

[node name="Floor_Saw" parent="hidden_traps" instance=ExtResource("7_gqryv")]
position = Vector2(2319, 232)
scale = Vector2(5, 5)

[node name="tiles" type="Node2D" parent="."]

[node name="platforms" type="TileMapLayer" parent="tiles"]
position = Vector2(589, 210)
scale = Vector2(3, 3)
tile_map_data = PackedByteArray("AAD+/woAAAACAAoAAAD+/wkAAAAAAAMAAAD+/wgAAAAAAAIAAAD+/wcAAAAAAAIAAAD+/wYAAAAAAAIAAAD+/wUAAAAAAAIAAAD+/wQAAAAAAAIAAAD+/wMAAAABAAMAAAD9/woAAAADAAoAAAD9/wkAAAACAAoAAAD9/wgAAAADAAoAAAD9/wcAAAACAAoAAAD9/wYAAAABAAoAAAD9/wUAAAADAAoAAAD9/wQAAAABAAoAAAD9/wMAAAACAAQAAAD8/woAAAADAAoAAAD8/wkAAAACAAoAAAD8/wgAAAADAAoAAAD8/wcAAAADAAoAAAD8/wYAAAACAAoAAAD8/wUAAAACAAoAAAD8/wQAAAACAAoAAAD8/wMAAAACAAQAAAD7/woAAAACAAoAAAD7/wkAAAABAAoAAAD7/wgAAAACAAoAAAD7/wcAAAACAAoAAAD7/wYAAAABAAoAAAD7/wUAAAABAAoAAAD7/wQAAAACAAoAAAD7/wMAAAACAAQAAAD6/woAAAACAAoAAAD6/wkAAAACAAoAAAD6/wgAAAADAAoAAAD6/wcAAAABAAoAAAD6/wYAAAABAAoAAAD6/wUAAAACAAoAAAD6/wQAAAADAAoAAAD6/wMAAAACAAQAAAD5/woAAAAEAAIAAAD5/wkAAAAEAAIAAAD5/wgAAAAEAAIAAAD5/wcAAAAEAAIAAAD5/wYAAAAEAAIAAAD5/wUAAAAEAAIAAAD5/wQAAAAEAAIAAAD5/wMAAAADAAMAAAD//xAAAAACAAoAAAD//w8AAAACAAoAAAD//w4AAAABAAoAAAD//w0AAAABAAoAAAD//wwAAAACAAoAAAD//wsAAAADAAoAAAD//woAAAABAAoAAAD//wkAAAACAAQAAAD+/xAAAAACAAoAAAD+/w8AAAACAAoAAAD+/w4AAAACAAoAAAD+/w0AAAABAAoAAAD+/wwAAAACAAoAAAD+/wsAAAADAAoAAAD9/xAAAAABAAoAAAD9/w8AAAACAAoAAAD9/w4AAAADAAoAAAD9/w0AAAACAAoAAAD9/wwAAAABAAoAAAD9/wsAAAACAAoAAAD8/xAAAAACAAoAAAD8/w8AAAABAAoAAAD8/w4AAAACAAoAAAD8/w0AAAACAAoAAAD8/wwAAAADAAoAAAD8/wsAAAABAAoAAAD7/xAAAAADAAoAAAD7/w8AAAADAAoAAAD7/w4AAAACAAoAAAD7/w0AAAADAAoAAAD7/wwAAAABAAoAAAD7/wsAAAACAAoAAAD6/xAAAAABAAoAAAD6/w8AAAABAAoAAAD6/w4AAAABAAoAAAD6/w0AAAACAAoAAAD6/wwAAAACAAoAAAD6/wsAAAACAAoAAAD5/w4AAAAEAAIAAAD5/w0AAAAEAAIAAAD5/wwAAAAEAAIAAAD5/wsAAAAEAAIAAAD5/xAAAAAEAAIAAAD5/w8AAAAEAAIAAAAAABAAAAAAAAIAAAAAAA8AAAAAAAIAAAAAAA4AAAAAAAIAAAAAAA0AAAAAAAIAAAAAAAwAAAAAAAIAAAAAAAsAAAAAAAIAAAAAAAoAAAAAAAIAAAAAAAkAAAABAAMAAAAAABoAAAABAAEAAAAAABkAAAAAAAIAAAAAABgAAAAAAAIAAAAAABcAAAAAAAIAAAAAABYAAAAAAAIAAAAAABUAAAAAAAIAAAAAABQAAAAAAAIAAAAAABMAAAAAAAIAAAAAABIAAAAAAAIAAAAAABEAAAAAAAIAAAD//xoAAAACAAAAAAD//xkAAAACAAoAAAD//xgAAAABAAoAAAD//xcAAAACAAoAAAD//xYAAAABAAoAAAD//xUAAAADAAoAAAD//xQAAAADAAoAAAD//xMAAAACAAoAAAD//xIAAAADAAoAAAD//xEAAAADAAoAAAD+/xoAAAACAAAAAAD+/xkAAAACAAoAAAD+/xgAAAABAAoAAAD+/xcAAAADAAoAAAD+/xYAAAABAAoAAAD+/xUAAAADAAoAAAD+/xQAAAABAAoAAAD+/xMAAAADAAoAAAD+/xIAAAACAAoAAAD+/xEAAAACAAoAAAD9/xoAAAACAAAAAAD9/xkAAAABAAoAAAD9/xgAAAADAAoAAAD9/xcAAAABAAoAAAD9/xYAAAADAAoAAAD9/xUAAAACAAoAAAD9/xQAAAACAAoAAAD9/xMAAAADAAoAAAD9/xIAAAACAAoAAAD9/xEAAAABAAoAAAD8/xoAAAACAAAAAAD8/xkAAAACAAoAAAD8/xgAAAADAAoAAAD8/xcAAAADAAoAAAD8/xYAAAABAAoAAAD8/xUAAAACAAoAAAD8/xQAAAADAAoAAAD8/xMAAAABAAoAAAD8/xIAAAADAAoAAAD8/xEAAAADAAoAAAD7/xoAAAACAAAAAAD7/xkAAAADAAoAAAD7/xgAAAADAAoAAAD7/xcAAAACAAoAAAD7/xYAAAABAAoAAAD7/xUAAAACAAoAAAD7/xQAAAABAAoAAAD7/xMAAAACAAoAAAD7/xIAAAABAAoAAAD7/xEAAAADAAoAAAD6/xoAAAACAAAAAAD6/xkAAAADAAoAAAD6/xgAAAADAAoAAAD6/xcAAAADAAoAAAD6/xYAAAADAAoAAAD6/xUAAAACAAoAAAD6/xQAAAABAAoAAAD6/xMAAAACAAoAAAD6/xIAAAABAAoAAAD6/xEAAAACAAoAAAD5/xoAAAADAAEAAAD5/xkAAAAEAAIAAAD5/xgAAAAEAAIAAAD5/xcAAAAEAAIAAAD5/xYAAAAEAAIAAAD5/xUAAAAEAAIAAAD5/xQAAAAEAAIAAAD5/xMAAAAEAAIAAAD5/xIAAAAEAAIAAAD5/xEAAAAEAAIAAAAFABkAAAABAAEAAAAFABgAAAAAAAIAAAAFABcAAAAAAAIAAAAFABYAAAAAAAIAAAAFABUAAAAAAAIAAAAFABQAAAAAAAIAAAAFABMAAAAAAAIAAAAFABIAAAAAAAIAAAAFABEAAAAAAAIAAAAFABAAAAAAAAIAAAAFAA8AAAAAAAIAAAAFAA4AAAAAAAIAAAAFAA0AAAAAAAIAAAAFAAwAAAAAAAIAAAAFAAsAAAAAAAIAAAAFAAoAAAAAAAIAAAAFAAkAAAAAAAIAAAAFAAgAAAAAAAIAAAAFAAcAAAAAAAIAAAAFAAYAAAAAAAIAAAAFAAUAAAAAAAIAAAAFAAQAAAAAAAIAAAAFAAMAAAABAAMAAAAEABkAAAACAAAAAAAEABgAAAADAAoAAAAEABcAAAADAAoAAAAEABYAAAADAAoAAAAEABUAAAACAAoAAAAEABQAAAADAAoAAAAEABMAAAADAAoAAAAEABIAAAACAAoAAAAEABEAAAADAAoAAAAEABAAAAADAAoAAAAEAA8AAAACAAoAAAAEAA4AAAACAAoAAAAEAA0AAAADAAoAAAAEAAwAAAACAAoAAAAEAAsAAAABAAoAAAAEAAoAAAACAAoAAAAEAAkAAAADAAoAAAAEAAgAAAADAAoAAAAEAAcAAAACAAoAAAAEAAYAAAACAAoAAAAEAAUAAAACAAoAAAAEAAQAAAADAAoAAAAEAAMAAAACAAQAAAADABkAAAACAAAAAAADABgAAAADAAoAAAADABcAAAABAAoAAAADABYAAAADAAoAAAADABUAAAABAAoAAAADABQAAAADAAoAAAADABMAAAADAAoAAAADABIAAAADAAoAAAADABEAAAADAAoAAAADABAAAAACAAoAAAADAA8AAAACAAoAAAADAA4AAAADAAoAAAADAA0AAAABAAoAAAADAAwAAAACAAoAAAADAAsAAAACAAoAAAADAAoAAAABAAoAAAADAAkAAAADAAoAAAADAAgAAAABAAoAAAADAAcAAAACAAoAAAADAAYAAAABAAoAAAADAAUAAAACAAoAAAADAAQAAAACAAoAAAADAAMAAAACAAQAAAACABkAAAADAAEAAAACABgAAAAEAAIAAAACABcAAAAEAAIAAAACABYAAAAEAAIAAAACABUAAAAEAAIAAAACABQAAAAEAAIAAAACABMAAAAEAAIAAAACABIAAAAEAAIAAAACABEAAAAEAAIAAAACABAAAAAEAAIAAAACAA8AAAAEAAIAAAACAA4AAAAEAAIAAAACAA0AAAAEAAIAAAACAAwAAAAEAAIAAAACAAsAAAAEAAIAAAACAAoAAAAEAAIAAAACAAkAAAAEAAIAAAACAAgAAAAEAAIAAAACAAcAAAABAAoAAAACAAYAAAAEAAMAAAACAAUAAAAEAAIAAAACAAQAAAAEAAIAAAACAAMAAAADAAMAAAALAAEAAAAIAA4AAAAKAAEAAAAGAA4AAAAJAAEAAAAIAA4AAAAIAAEAAAAIAA4AAAAHAAEAAAAIAA4AAAAGAAEAAAAGAA4AAAAFAAEAAAAIAA4AAAASABEAAAAAAAIAAAASABAAAAAAAAIAAAASAA8AAAAAAAIAAAASAA4AAAAAAAIAAAASAA0AAAAAAAIAAAASAAwAAAAAAAIAAAASAAsAAAAAAAIAAAASAAoAAAAAAAIAAAASAAkAAAAAAAIAAAASAAgAAAAAAAIAAAASAAcAAAAAAAIAAAASAAYAAAAAAAIAAAASAAUAAAAAAAIAAAASAAQAAAAAAAIAAAASAAMAAAAAAAIAAAASAAIAAAAAAAIAAAASAAEAAAAAAAIAAAASAAAAAAAAAAIAAAASAP//AAAAAAIAAAASAP7/AAAAAAIAAAASAP3/AAABAAMAAAARABEAAAABAAoAAAARABAAAAADAAoAAAARAA8AAAACAAoAAAARAA4AAAABAAoAAAARAA0AAAABAAoAAAARAAwAAAABAAoAAAARAAsAAAADAAoAAAARAAoAAAADAAoAAAARAAkAAAABAAoAAAARAAgAAAACAAoAAAARAAcAAAACAAoAAAARAAYAAAACAAoAAAARAAUAAAACAAoAAAARAAQAAAABAAoAAAARAAMAAAABAAoAAAARAAIAAAADAAoAAAARAAEAAAADAAoAAAARAAAAAAACAAoAAAARAP//AAABAAoAAAARAP7/AAACAAoAAAARAP3/AAACAAQAAAAQABEAAAAEAAIAAAAQABAAAAAEAAIAAAAQAA8AAAAEAAIAAAAQAA4AAAAEAAIAAAAQAA0AAAAEAAIAAAAQAAwAAAAEAAIAAAAQAAsAAAAEAAIAAAAQAAoAAAAEAAIAAAAQAAkAAAAEAAIAAAAQAAgAAAAEAAIAAAAQAAcAAAAEAAIAAAAQAAYAAAAEAAIAAAAQAAUAAAAEAAIAAAAQAAQAAAAEAAIAAAAQAAMAAAAEAAIAAAAQAAIAAAAEAAIAAAAQAAEAAAAEAAIAAAAQAAAAAAAEAAIAAAAQAP//AAAEAAIAAAAQAP7/AAAEAAIAAAAQAP3/AAADAAMAAAAYABIAAAACAAoAAAAYABEAAAABAAoAAAAYABAAAAACAAoAAAAYAA8AAAADAAoAAAAYAA4AAAADAAoAAAAYAA0AAAADAAoAAAAYAAwAAAADAAoAAAAYAAsAAAABAAoAAAAYAAoAAAADAAoAAAAYAAkAAAABAAoAAAAYAAgAAAACAAoAAAAYAAcAAAACAAoAAAAYAAYAAAACAAoAAAAYAAUAAAACAAoAAAAYAAQAAAACAAoAAAAYAAMAAAADAAoAAAAYAAIAAAABAAoAAAAYAAEAAAADAAoAAAAYAAAAAAADAAoAAAAYAP//AAADAAoAAAAYAP7/AAACAAoAAAAYAP3/AAABAAoAAAAYAPz/AAABAAoAAAAYAPv/AAACAAoAAAAYAPr/AAADAAoAAAAYAPn/AAABAAoAAAAYAPj/AAACAAQAAAAXABIAAAABAAoAAAAXABEAAAADAAoAAAAXABAAAAADAAoAAAAXAA8AAAACAAoAAAAXAA4AAAACAAoAAAAXAA0AAAABAAoAAAAXAAwAAAABAAoAAAAXAAsAAAACAAoAAAAXAAoAAAACAAoAAAAXAAkAAAABAAoAAAAXAAgAAAABAAoAAAAXAAcAAAADAAoAAAAXAAYAAAABAAoAAAAXAAUAAAACAAoAAAAXAAQAAAADAAoAAAAXAAMAAAADAAoAAAAXAAIAAAACAAoAAAAXAAEAAAADAAoAAAAXAAAAAAABAAoAAAAXAP//AAABAAoAAAAXAP7/AAADAAoAAAAXAP3/AAADAAoAAAAXAPz/AAACAAoAAAAXAPv/AAACAAoAAAAXAPr/AAABAAoAAAAXAPn/AAADAAoAAAAXAPj/AAACAAQAAAAWABIAAAAEAAIAAAAWABEAAAAEAAIAAAAWABAAAAAEAAIAAAAWAA8AAAAEAAIAAAAWAA4AAAAEAAIAAAAWAA0AAAAEAAIAAAAWAAwAAAAEAAIAAAAWAAsAAAAEAAIAAAAWAAoAAAAEAAIAAAAWAAkAAAAEAAIAAAAWAAgAAAAEAAIAAAAWAAcAAAAEAAIAAAAWAAYAAAAEAAIAAAAWAAUAAAAEAAIAAAAWAAQAAAAEAAIAAAAWAAMAAAAEAAIAAAAWAAIAAAAEAAIAAAAWAAEAAAAEAAIAAAAWAAAAAAAEAAIAAAAWAP//AAADAAAAAAAWAP7/AAADAAoAAAAWAP3/AAADAAoAAAAWAPz/AAADAAoAAAAWAPv/AAADAAQAAAAWAPr/AAAEAAIAAAAWAPn/AAAEAAIAAAAWAPj/AAADAAMAAAASABkAAAABAAEAAAASABgAAAAAAAIAAAASABcAAAAAAAIAAAASABYAAAAAAAIAAAASABUAAAAAAAIAAAASABQAAAAAAAIAAAASABMAAAAAAAIAAAASABIAAAAAAAIAAAARABkAAAACAAAAAAARABgAAAACAAoAAAARABcAAAACAAoAAAARABYAAAACAAoAAAARABUAAAABAAoAAAARABQAAAABAAoAAAARABMAAAADAAoAAAARABIAAAADAAoAAAAQABkAAAADAAEAAAAQABgAAAAEAAIAAAAQABcAAAAEAAIAAAAQABYAAAAEAAIAAAAQABUAAAAEAAIAAAAQABQAAAAEAAIAAAAQABMAAAAEAAIAAAAQABIAAAAEAAIAAAAYABkAAAABAAEAAAAYABgAAAAAAAIAAAAYABcAAAAAAAIAAAAYABYAAAAAAAIAAAAYABUAAAAAAAIAAAAYABQAAAABAAAAAAAYABMAAAADAAoAAAAXABkAAAACAAAAAAAXABgAAAADAAoAAAAXABcAAAABAAoAAAAXABYAAAADAAoAAAAXABUAAAADAAoAAAAXABQAAAACAAoAAAAXABMAAAADAAoAAAAWABkAAAADAAEAAAAWABgAAAAEAAIAAAAWABcAAAAEAAIAAAAWABYAAAAEAAIAAAAWABUAAAAEAAIAAAAWABQAAAAEAAIAAAAWABMAAAAEAAIAAAAgAPz/AAAAAAIAAAAgAPv/AAAAAAIAAAAgAPr/AAAAAAIAAAAgAPn/AAAAAAIAAAAgAPj/AAABAAMAAAAfAPz/AAADAAoAAAAfAPv/AAADAAoAAAAfAPr/AAADAAoAAAAfAPn/AAADAAoAAAAfAPj/AAACAAQAAAAeAPz/AAABAAoAAAAeAPv/AAACAAoAAAAeAPr/AAABAAoAAAAeAPn/AAADAAoAAAAeAPj/AAACAAQAAAAdAPz/AAACAAoAAAAdAPv/AAACAAoAAAAdAPr/AAADAAoAAAAdAPn/AAABAAoAAAAdAPj/AAACAAQAAAAcAPz/AAABAAoAAAAcAPv/AAABAAoAAAAcAPr/AAADAAoAAAAcAPn/AAABAAoAAAAcAPj/AAACAAQAAAAbAPz/AAABAAoAAAAbAPv/AAACAAoAAAAbAPr/AAACAAoAAAAbAPn/AAABAAoAAAAbAPj/AAACAAQAAAAaAPz/AAACAAoAAAAaAPv/AAADAAoAAAAaAPr/AAACAAoAAAAaAPn/AAABAAoAAAAaAPj/AAACAAQAAAAZAPz/AAADAAoAAAAZAPv/AAABAAoAAAAZAPr/AAABAAoAAAAZAPn/AAABAAoAAAAZAPj/AAACAAQAAAAfABAAAAACAAoAAAAfAA8AAAADAAoAAAAfAA4AAAADAAoAAAAfAA0AAAADAAoAAAAfAAwAAAABAAoAAAAfAAsAAAACAAoAAAAfAAoAAAACAAoAAAAfAAkAAAACAAoAAAAfAAgAAAADAAoAAAAfAAcAAAABAAoAAAAfAAYAAAADAAoAAAAfAAUAAAABAAoAAAAfAAQAAAADAAoAAAAfAAMAAAACAAoAAAAfAAIAAAACAAoAAAAfAAEAAAACAAoAAAAfAAAAAAADAAoAAAAfAP//AAABAAoAAAAfAP7/AAACAAoAAAAfAP3/AAADAAoAAAAeABAAAAACAAoAAAAeAA8AAAABAAoAAAAeAA4AAAACAAoAAAAeAA0AAAABAAoAAAAeAAwAAAABAAoAAAAeAAsAAAABAAoAAAAeAAoAAAABAAoAAAAeAAkAAAABAAoAAAAeAAgAAAACAAoAAAAeAAcAAAADAAoAAAAeAAYAAAADAAoAAAAeAAUAAAADAAoAAAAeAAQAAAACAAoAAAAeAAMAAAACAAoAAAAeAAIAAAADAAoAAAAeAAEAAAACAAoAAAAeAAAAAAADAAoAAAAeAP//AAABAAoAAAAeAP7/AAADAAoAAAAeAP3/AAADAAoAAAAdABAAAAADAAoAAAAdAA8AAAABAAoAAAAdAA4AAAACAAoAAAAdAA0AAAACAAoAAAAdAAwAAAADAAoAAAAdAAsAAAABAAoAAAAdAAoAAAABAAoAAAAdAAkAAAABAAoAAAAdAAgAAAADAAoAAAAdAAcAAAABAAoAAAAdAAYAAAABAAoAAAAdAAUAAAADAAoAAAAdAAQAAAACAAoAAAAdAAMAAAACAAoAAAAdAAIAAAADAAoAAAAdAAEAAAACAAoAAAAdAAAAAAACAAoAAAAdAP//AAADAAoAAAAdAP7/AAABAAoAAAAdAP3/AAACAAoAAAAcABAAAAADAAoAAAAcAA8AAAADAAoAAAAcAA4AAAADAAoAAAAcAA0AAAADAAoAAAAcAAwAAAABAAoAAAAcAAsAAAADAAoAAAAcAAoAAAABAAoAAAAcAAkAAAACAAoAAAAcAAgAAAACAAoAAAAcAAcAAAABAAoAAAAcAAYAAAACAAoAAAAcAAUAAAABAAoAAAAcAAQAAAACAAoAAAAcAAMAAAABAAoAAAAcAAIAAAADAAoAAAAcAAEAAAADAAoAAAAcAAAAAAADAAoAAAAcAP//AAADAAoAAAAcAP7/AAADAAoAAAAcAP3/AAADAAoAAAAbABAAAAACAAoAAAAbAA8AAAABAAoAAAAbAA4AAAADAAoAAAAbAA0AAAADAAoAAAAbAAwAAAABAAoAAAAbAAsAAAADAAoAAAAbAAoAAAACAAoAAAAbAAkAAAABAAoAAAAbAAgAAAADAAoAAAAbAAcAAAABAAoAAAAbAAYAAAADAAoAAAAbAAUAAAABAAoAAAAbAAQAAAADAAoAAAAbAAMAAAACAAoAAAAbAAIAAAADAAoAAAAbAAEAAAACAAoAAAAbAAAAAAACAAoAAAAbAP//AAADAAoAAAAbAP7/AAADAAoAAAAbAP3/AAADAAoAAAAaABAAAAABAAoAAAAaAA8AAAABAAoAAAAaAA4AAAADAAoAAAAaAA0AAAABAAoAAAAaAAwAAAABAAoAAAAaAAsAAAACAAoAAAAaAAoAAAADAAoAAAAaAAkAAAACAAoAAAAaAAgAAAADAAoAAAAaAAcAAAADAAoAAAAaAAYAAAADAAoAAAAaAAUAAAADAAoAAAAaAAQAAAACAAoAAAAaAAMAAAABAAoAAAAaAAIAAAADAAoAAAAaAAEAAAACAAoAAAAaAAAAAAACAAoAAAAaAP//AAADAAoAAAAaAP7/AAADAAoAAAAaAP3/AAADAAoAAAAZABAAAAADAAoAAAAZAA8AAAABAAoAAAAZAA4AAAABAAoAAAAZAA0AAAADAAoAAAAZAAwAAAABAAoAAAAZAAsAAAADAAoAAAAZAAoAAAADAAoAAAAZAAkAAAADAAoAAAAZAAgAAAADAAoAAAAZAAcAAAACAAoAAAAZAAYAAAABAAoAAAAZAAUAAAADAAoAAAAZAAQAAAACAAoAAAAZAAMAAAACAAoAAAAZAAIAAAADAAoAAAAZAAEAAAABAAoAAAAZAAAAAAABAAoAAAAZAP//AAADAAoAAAAZAP7/AAADAAoAAAAZAP3/AAADAAoAAAAgABAAAAACAAoAAAAgAA8AAAABAAoAAAAgAA4AAAACAAoAAAAgAA0AAAABAAoAAAAgAAwAAAADAAoAAAAgAAsAAAADAAoAAAAgAAoAAAABAAoAAAAgAAkAAAABAAoAAAAgAAgAAAABAAoAAAAgAAcAAAABAAoAAAAgAAYAAAABAAoAAAAgAAUAAAACAAoAAAAgAAQAAAADAAoAAAAgAAMAAAABAAoAAAAgAAIAAAACAAoAAAAgAAEAAAACAAoAAAAgAAAAAAABAAQAAAAgAP//AAAAAAIAAAAgAP7/AAAAAAIAAAAgAP3/AAAAAAIAAAAVAP//AAADAAEAAAAVAP7/AAAEAAIAAAAVAP3/AAAEAAIAAAAVAPz/AAAEAAIAAAAVAPv/AAADAAMAAAAnABQAAAABAAEAAAAnABMAAAAAAAIAAAAnABIAAAAAAAIAAAAnABEAAAAAAAIAAAAnABAAAAAAAAIAAAAnAA8AAAAAAAIAAAAnAA4AAAAAAAIAAAAnAA0AAAAAAAIAAAAnAAwAAAAAAAIAAAAnAAsAAAAAAAIAAAAnAAoAAAAAAAIAAAAnAAkAAAAAAAIAAAAnAAgAAAAAAAIAAAAnAAcAAAAAAAIAAAAnAAYAAAAAAAIAAAAnAAUAAAAAAAIAAAAnAAQAAAAAAAIAAAAnAAMAAAAAAAIAAAAnAAIAAAAAAAIAAAAnAAEAAAAAAAIAAAAnAAAAAAABAAMAAAAmABQAAAACAAAAAAAmABMAAAADAAoAAAAmABIAAAADAAoAAAAmABEAAAABAAoAAAAmABAAAAADAAoAAAAmAA8AAAACAAoAAAAmAA4AAAACAAoAAAAmAA0AAAABAAoAAAAmAAwAAAACAAoAAAAmAAsAAAADAAoAAAAmAAoAAAADAAoAAAAmAAkAAAADAAoAAAAmAAgAAAABAAoAAAAmAAcAAAABAAoAAAAmAAYAAAADAAoAAAAmAAUAAAADAAoAAAAmAAQAAAABAAoAAAAmAAMAAAABAAoAAAAmAAIAAAACAAoAAAAmAAEAAAADAAoAAAAmAAAAAAACAAQAAAAlABQAAAACAAAAAAAlABMAAAABAAoAAAAlABIAAAADAAoAAAAlABEAAAADAAoAAAAlABAAAAADAAoAAAAlAA8AAAABAAoAAAAlAA4AAAADAAoAAAAlAA0AAAACAAoAAAAlAAwAAAACAAoAAAAlAAsAAAADAAoAAAAlAAoAAAACAAoAAAAlAAkAAAACAAoAAAAlAAgAAAACAAoAAAAlAAcAAAADAAoAAAAlAAYAAAABAAoAAAAlAAUAAAABAAoAAAAlAAQAAAADAAoAAAAlAAMAAAACAAoAAAAlAAIAAAADAAoAAAAlAAEAAAADAAoAAAAlAAAAAAACAAQAAAAkABQAAAACAAAAAAAkABMAAAADAAoAAAAkABIAAAACAAoAAAAkABEAAAABAAoAAAAkABAAAAADAAoAAAAkAA8AAAABAAoAAAAkAA4AAAABAAoAAAAkAA0AAAABAAoAAAAkAAwAAAADAAoAAAAkAAsAAAABAAoAAAAkAAoAAAABAAoAAAAkAAkAAAABAAoAAAAkAAgAAAABAAoAAAAkAAcAAAADAAoAAAAkAAYAAAACAAoAAAAkAAUAAAADAAoAAAAkAAQAAAADAAoAAAAkAAMAAAABAAoAAAAkAAIAAAACAAoAAAAkAAEAAAADAAoAAAAkAAAAAAACAAQAAAAjABQAAAACAAAAAAAjABMAAAACAAoAAAAjABIAAAADAAoAAAAjABEAAAABAAoAAAAjABAAAAABAAoAAAAjAA8AAAADAAoAAAAjAA4AAAADAAoAAAAjAA0AAAACAAoAAAAjAAwAAAABAAoAAAAjAAsAAAADAAoAAAAjAAoAAAABAAoAAAAjAAkAAAABAAoAAAAjAAgAAAACAAoAAAAjAAcAAAACAAoAAAAjAAYAAAACAAoAAAAjAAUAAAABAAoAAAAjAAQAAAADAAoAAAAjAAMAAAADAAoAAAAjAAIAAAABAAoAAAAjAAEAAAABAAoAAAAjAAAAAAACAAQAAAAiABQAAAACAAAAAAAiABMAAAACAAoAAAAiABIAAAADAAoAAAAiABEAAAACAAoAAAAiABAAAAABAAoAAAAiAA8AAAABAAoAAAAiAA4AAAADAAoAAAAiAA0AAAABAAoAAAAiAAwAAAACAAoAAAAiAAsAAAACAAoAAAAiAAoAAAACAAoAAAAiAAkAAAACAAoAAAAiAAgAAAACAAoAAAAiAAcAAAADAAoAAAAiAAYAAAABAAoAAAAiAAUAAAADAAoAAAAiAAQAAAABAAoAAAAiAAMAAAABAAoAAAAiAAIAAAABAAoAAAAiAAEAAAADAAoAAAAiAAAAAAACAAQAAAAhABQAAAACAAAAAAAhABMAAAABAAoAAAAhABIAAAACAAoAAAAhABEAAAACAAoAAAAhABAAAAADAAoAAAAhAA8AAAACAAoAAAAhAA4AAAABAAoAAAAhAA0AAAABAAoAAAAhAAwAAAABAAoAAAAhAAsAAAADAAoAAAAhAAoAAAABAAoAAAAhAAkAAAACAAoAAAAhAAgAAAADAAoAAAAhAAcAAAABAAoAAAAhAAYAAAACAAoAAAAhAAUAAAACAAoAAAAhAAQAAAACAAoAAAAhAAMAAAACAAoAAAAhAAIAAAACAAoAAAAhAAEAAAACAAoAAAAhAAAAAAACAAQAAAAgABQAAAACAAAAAAAgABMAAAACAAoAAAAgABIAAAABAAoAAAAgABEAAAABAAoAAAAfABQAAAACAAAAAAAfABMAAAABAAoAAAAfABIAAAABAAoAAAAfABEAAAADAAoAAAAeABQAAAACAAAAAAAeABMAAAADAAoAAAAeABIAAAACAAoAAAAeABEAAAABAAoAAAAdABQAAAACAAAAAAAdABMAAAADAAoAAAAdABIAAAACAAoAAAAdABEAAAADAAoAAAAcABQAAAACAAAAAAAcABMAAAADAAoAAAAcABIAAAABAAoAAAAcABEAAAABAAoAAAAbABEAAAADAAoAAAAaABEAAAABAAoAAAAbABQAAAACAAAAAAAbABMAAAADAAoAAAAbABIAAAABAAoAAAAaABQAAAACAAAAAAAaABMAAAACAAoAAAAaABIAAAABAAoAAAAZABQAAAACAAAAAAAZABMAAAABAAoAAAAZABIAAAACAAoAAAAZABEAAAACAAoAAAAqAP7/AAADAA4AAAApAP7/AAABAA4AAAAoAP7/AAABAA4AAAAnAP7/AAABAA4AAAAmAP7/AAABAA4AAAAlAP7/AAABAA4AAAAyAPz/AAADAA4AAAAxAPz/AAABAA4AAAAwAPz/AAABAA4AAAAvAPz/AAADAA4AAAAuAPz/AAABAA4AAAAtAPz/AAADAA4AAAA2AAYAAAACAAAAAAA2AAUAAAABAAoAAAA2AAQAAAABAAoAAAA2AAMAAAABAAoAAAA2AAIAAAAAAAIAAAA2AAEAAAAAAAIAAAA2AAAAAAAAAAIAAAA2AP//AAAAAAIAAAA2AP7/AAABAAMAAAA1AAYAAAACAAAAAAA1AAUAAAACAAoAAAA1AAQAAAABAAoAAAA1AAMAAAABAAoAAAA1AAIAAAADAAoAAAA1AAEAAAABAAoAAAA1AAAAAAACAAoAAAA1AP//AAACAAoAAAA1AP7/AAACAAQAAAA0AAYAAAADAAEAAAA0AAUAAAAEAAIAAAA0AAQAAAAEAAIAAAA0AAMAAAAEAAIAAAA0AAIAAAAEAAIAAAA0AAEAAAAEAAIAAAA0AAAAAAAEAAIAAAA0AP//AAAEAAIAAAA0AP7/AAADAAMAAAA8AAUAAAACAAoAAAA8AAQAAAACAAoAAAA8AAMAAAADAAoAAAA7AAUAAAACAAoAAAA7AAQAAAADAAoAAAA7AAMAAAABAAoAAAA6AAUAAAACAAoAAAA6AAQAAAACAAoAAAA6AAMAAAADAAoAAAA5AAQAAAABAAoAAAA5AAMAAAABAAoAAAA5AAIAAAACAAQAAAA6AAIAAAACAAQAAAA7AAIAAAACAAQAAAA5AAUAAAADAAoAAAA7AAYAAAACAAAAAAA6AAYAAAACAAAAAAA5AAYAAAACAAAAAAA8AAIAAAACAAQAAAA8AAYAAAACAAAAAAA9AAMAAAAAAAIAAAA9AAQAAAAAAAIAAAA9AAIAAAABAAMAAAA9AAUAAAAAAAIAAAA9AAYAAAABAAEAAAA4AAUAAAADAAoAAAA4AAQAAAACAAoAAAA4AAMAAAACAAoAAAA3AAQAAAABAAoAAAA3AAMAAAADAAoAAAA3AAIAAAADAAMAAAA4AAIAAAACAAQAAAA3AAUAAAACAAoAAAA4AAYAAAACAAAAAAA3AAYAAAACAAAAAAABAAcAAAABAAoAAAABAAYAAAADAAMAAAA=")
tile_set = ExtResource("6_fo2p1")

[node name="traps" type="Node2D" parent="."]

[node name="spike_trap" parent="traps" instance=ExtResource("11_chx1n")]
position = Vector2(1761, -141)
scale = Vector2(5, 5)

[node name="spike_trap2" parent="traps" instance=ExtResource("11_chx1n")]
position = Vector2(1836, -142)
scale = Vector2(5, 5)

[node name="spike_trap3" parent="traps" instance=ExtResource("11_chx1n")]
position = Vector2(1981, -143)
scale = Vector2(5, 5)

[node name="spike_trap4" parent="traps" instance=ExtResource("11_chx1n")]
position = Vector2(2056, -144)
scale = Vector2(5, 5)

[connection signal="health_depleted" from="UI/HUD" to="." method="_all_lives_lost"]
[connection signal="touched_player" from="base_objects/Checkpoint" to="." method="_on_checkpoint_touched"]
[connection signal="body_entered" from="Starfruit" to="." method="_on_starfruit_touched"]
[connection signal="body_entered" from="hidden_traps/DeathZone" to="." method="_on_death_zone_touched"]
[connection signal="touched_player" from="hidden_traps/saw" to="." method="_on_trap_touched_player"]
[connection signal="touched_player" from="hidden_traps/saw2" to="." method="_on_trap_touched_player"]
[connection signal="touched_player" from="hidden_traps/saw3" to="." method="_on_trap_touched_player"]
[connection signal="touched_player" from="hidden_traps/saw4" to="." method="_on_trap_touched_player"]
[connection signal="touched_player" from="hidden_traps/spike_trap5" to="." method="_on_trap_touched_player"]
[connection signal="touched_player" from="hidden_traps/spike_trap6" to="." method="_on_trap_touched_player"]
[connection signal="touched_player" from="hidden_traps/Floor_Saw" to="." method="_on_trap_touched_player"]
[connection signal="touched_player" from="traps/spike_trap" to="." method="_on_trap_touched_player"]
[connection signal="touched_player" from="traps/spike_trap2" to="." method="_on_trap_touched_player"]
[connection signal="touched_player" from="traps/spike_trap3" to="." method="_on_trap_touched_player"]
[connection signal="touched_player" from="traps/spike_trap4" to="." method="_on_trap_touched_player"]
